issue resolved with blog post code overlaps navbar

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,6 +1,7 @@
 .navlayout {
   position: sticky;
   top: 0px;
+  z-index: 999;
   display: flex;
   justify-content: space-between;
   align-items: center;
